[package]
name = "hex_war"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "Performance",
  "console",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
